--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,3 +1,6 @@
 <li>
-  <%= movie.title %>
+  <b>Title</b>: <%= movie.title %></br>
+  <b>Director</b>: <%= movie.director %></br>
+  <b>Description</b>: <%= movie.description %></br>
+  </br>
 </li>
