--- a/app/assets/stylesheets/movie.scss
+++ b/app/assets/stylesheets/movie.scss
@@ -140,6 +140,7 @@ ul.product-grid li {
 @media only screen and (min-width: 771px) {
   .product-view .product-shop {
     width: 80%;
+    float: right;
   }
 }
 
@@ -233,7 +234,7 @@ ul.product-grid li {
 }
 
 .product-view .product-shop {
-  float: right;
+  float: left;
 }
 .page-title {
   margin-top: 30px;
@@ -308,6 +309,8 @@ label {
 
 .input.form-control {
     vertical-align: inherit !important;
+    display: inline;
+    width: auto;
 }
 
 .schedule {
@@ -327,4 +330,14 @@ label {
   position: relative;
   padding-bottom: 95px;
   height: 130px;
+}
+
+iframe {
+  width: auto;
+}
+
+@media only screen and (min-width: 771px) {
+  iframe {
+    width: 650px;
+  }
 }
