--- a/app/views/searchs/index.js.erb
+++ b/app/views/searchs/index.js.erb
@@ -1,1 +1,1 @@
-$("#search-results").html("<%= j render("searchs/results", movies: @movies) %>");
+$("#search-results").html("<%= j render("searchs/results", results: @movies) %>");
