--- a/app/views/comings/index.html.erb
+++ b/app/views/comings/index.html.erb
@@ -4,7 +4,7 @@
     <span class="h1"><%= t "layouts.header.coming_soon" %></span>
   </div>
   <div id="paginator">
-    <%= paginate @movies, remote: true %>
+    <%= paginate @movies, theme: "twitter-bootstrap-3", remote: true %>
   </div>
   <div class="content main-movie">
     <ul id="movies" class="movies product-grid product-grid--max-4-col center">
