--- a/app/views/searchs/_results.html.erb
+++ b/app/views/searchs/_results.html.erb
@@ -1,11 +1,10 @@
-<% if movies.nil? || movies.empty? %>
+<% if results.nil? || results.empty? %>
   <%= t ".no_result" %>
 <% else %>
+  <%= paginate results, theme: "twitter-bootstrap-3", remote: true %>
   <div class="content main-movie">
-    <%= paginate movies, theme: "twitter-bootstrap-3", remote: true %>
     <ul id="movies" class="movies product-grid product-grid--max-4-col center">
-      <%= render movies %>
+      <%= render results %>
     </ul>
-    <%= paginate movies, theme: "twitter-bootstrap-3", remote: true %>
   </div>
 <% end %>
