--- a/app/views/searchs/index.html.erb
+++ b/app/views/searchs/index.html.erb
@@ -2,5 +2,5 @@
 <h1><%= t ".search_by_title" %></h1>
 
 <div id="search-results">
-  <%= render "searchs/results", movies: @movies %>
+  <%= render "searchs/results", results: @movies %>
 </div>
