--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -16,6 +16,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     data-i18n_unit="<%= t "js.unit" %>"
     data-i18n_precision="<%= t "number.currency.format.precision" %>"
     data-i18n_row="<%= t "js.row" %>"
+    data-i18n_screen="<%= t ".screen" %>"
     data-i18n_number="<%= t "js.number" %>">
   </div>
 
