--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -1,18 +1,18 @@
 <div class="main_nav">
   <div class="nav fl">
     <ul class="nav navbar-nav navbar-left">
-      <li><%= link_to t(".home"), root_path %></li>
+      <li><%= link_to t("layouts.header.home"), root_path %></li>
       <li class="dropdown">
-        <%= link_to t(".movie"), "#",
+        <%= link_to t("layouts.header.movie"), "#",
           {"class": "dropdown-toggle", "data-toggle": "dropdown"} %>
         <ul class="dropdown-menu">
-          <li><%= link_to t(".now_showing"), showings_path %></li>
-          <li><%= link_to t(".coming_soon"), comings_path %></li>
+          <li><%= link_to t("layouts.header.now_showing"), showings_path %></li>
+          <li><%= link_to t("layouts.header.coming_soon"), comings_path %></li>
         </ul>
       </li>
-      <li><%= link_to t(".screening"), schedules_path %></li>
-      <li><%= link_to t(".price"), price_path %></li>
-      <li><%= link_to t(".about"), about_path %></li>
+      <li><%= link_to t("layouts.header.screening"), schedules_path %></li>
+      <li><%= link_to t("layouts.header.price"), price_path %></li>
+      <li><%= link_to t("layouts.header.about"), about_path %></li>
       <li>
         <div id="header-search" class="skip-content">
           <div class="header-search-left">
